# odus

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
completions/: _odus  odus.bash  odus.fish
src/: audit.rs  auth.rs  cli.rs  config.rs  exec.rs  main.rs  rules.rs  security.rs
tests/: completion_delegation.rs
