[package]
name    = "odus"
version = "0.3.4"
edition = "2024"

[dependencies]
# Parsing do odus.toml
toml = "1.0.7"
# Syscalls Unix seguras (stat, fchmod, fchown, execvp, setuid, setgid...)
nix = { version = "0.29", features = ["process", "user", "fs"] }
# Informações de usuários e grupos (/etc/passwd, /etc/group)
users = "0.11"
# Error handling idiomático
anyhow = "1.0.102"
# Leitura de senha sem echo no terminal
rpassword = "7.4.0"
# Autenticação PAM
pam = "0.7"
# Parsing de argumentos leve
pico-args = "0.5"

# Chamadas C diretas para syslog (LOG_AUTHPRIV) — já transitiva via nix,
# declarada explicitamente para uso direto no módulo audit.
libc = "0.2.183"

[profile.release]
opt-level     = "s"       # Otimiza para tamanho binário
lto           = true      # Link-Time Optimization (elimina código morto entre crates)
codegen-units = 1         # Uma única unidade: permite otimizações globais
panic         = "abort"   # Sem overhead de unwinding — adequado para binário de sistema
strip         = true      # Remove símbolos do binário final
incremental   = false     # Compilações reproduzíveis (importante para binário setuid)
